# murder

./: README.md
murder/: .atombuild.yaml  Cargo.toml
murder-client/: Cargo.toml
murder-client/src/: main.rs
murder-server/: .gitignore  Cargo.toml  api.md  build.sh
murder-server/protobufs/: murder.proto
murder-server/python-server/: murder_client.py  murder_exception.py  pyserv.py
murder-server/src/: gameserver.rs  main.rs  packet.rs  packetphase.rs
murder/src/: lib.rs  player.rs
murder/src/ai/: ai_civilian.rs  ai_dumb.rs  ai_mafia.rs  ai_trait.rs  mod.rs
murder/src/gamesession/: channel.rs  chatchannel.rs  gamesession.rs  internalstate.rs  mod.rs
murder/src/phase/: mafia_state.rs  mod.rs  morning_state.rs  selection_state.rs  special_state.rs
